# syscul

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs
