[package]
name = "sysculptors"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.23"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"
volatile = "0.2.6"
x86_64 = "0.14.10"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]

test-success-exit-code = 33         # (0x10 << 1) | 1